[metadata]
name = tleng
version = 2.2.0.dev12
description = "TLeng is a 2d python game engine"
long_description = file: README.md
long_description_content_type = text/markdown
author = theolaos
author_email = your.email@example.com
license = MIT
license_files = LICENSE
classifiers =
    Intended Audience::Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

keywords = game engine, framework, ecs, entity component system

project_urls =
    Documentation = https://github.com/tl-ecosystem/tleng/wiki
    Source Code = https://github.com/tl-ecosystem/tleng
    Issue Tracker = https://github.com/tl-ecosystem/tleng/issues

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.11
install_requires =
    pygame-ce 
    numpy
    moderngl
    pymunk
    typing_extensions


[options.packages.find]
where = src
include = tleng2*
exclude =
    **/__pycache__
    **/*.pyc
    **/*.pyo